# AoC2024

./: .gitignore
day01/: dune-project
day01/lib/: day01.ml  dune
day01/lib/public/: ex1.ml  ex2.ml  io.ml
day01/test/: dune  test_ex1.ml  test_ex2.ml
day02/: dune-project
day02/lib/: day02.ml  dune
day02/lib/ex1/: ex1.ml  ex1.mli
day02/lib/ex2/: ex2.ml
day02/lib/io/: io.ml  io.mli
day02/lib/private/: ex1.ml  ex2.ml  io.ml  utils.ml
day02/lib/public/: io.ml  utils.mli
day02/lib/utils/: utils.ml
day02/test/: dune  test_ex1.ml  test_ex2.ml  test_utils.ml
day03/: dune-project
day03/lib/: day03.ml  dune
day03/lib/private/: ex1.ml  ex2.ml
day03/lib/public/: ex1.ml  ex2.mli  io.ml
day03/test/: dune  test_ex1.ml
day04/: dune-project
day04/lib/: day04.ml  dune
day04/lib/private/: ex1.ml  ex2.ml
day04/lib/public/: ex1.mli  ex2.ml  io.ml  utils.ml
day04/test/: dune  runner.ml  test_ex1.ml
